<resources>
    <string name="app_name">TJWallet</string>
    <string name="app_name_show">TJ Wallet</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="company_name">深圳天玑数据有限公司</string>
    <string name="wallet">钱包</string>
    <string name="main">我的</string>
    <string name="find">发现</string>
    <string name="article">资讯</string>
    <string name="my_assets">我的资产</string>
    <string name="transfer">转账</string>
    <string name="collect">收款</string>
    <string name="assets_details">资产明细</string>
    <string name="no_back_up">您还没有对钱包进行备份，可能会影响资产安全</string>
    <string name="goto_back_up">前往备份</string>
    <string name="set_amount">点击设置收款金额</string>
    <string name="copy_address">复制地址</string>
    <string name="copy_success">复制成功</string>
    <string name="software_wallet">软件钱包</string>
    <string name="hardware_wallet">硬件钱包</string>
    <string name="add_wallet">添加钱包</string>
    <string name="all">全部</string>
    <string name="transfer_into">转入</string>
    <string name="transfer_out">转出</string>
    <string name="transfer_details">交易详情</string>
    <string name="transfer_success">交易成功</string>
    <string name="miner_fee">矿工费用</string>
    <string name="pay_address">付款地址</string>
    <string name="collect_address">收款地址</string>
    <string name="transfer_time">交易时间</string>
    <string name="remarks">备注信息</string>
    <string name="transfer_number">交易哈希</string>
    <string name="block">区块高度</string>
    <string name="create_import_wallet">创建/导入钱包</string>
    <string name="create_import_wallet_desc">创建或通过助记词/私钥/keystore导入钱包</string>
    <string name="bind_hardware_wallet">配对硬件钱包</string>
    <string name="bind_hardware_wallet_desc">连接并配对 W1 硬件钱包</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="eth">ETH</string>
    <string name="eth_details">ETH及所有ERC20代币</string>
    <string name="file_coin">FileCoin</string>
    <string name="file_coin_details">去中心化的存储网络</string>
    <string name="btc">BTC</string>
    <string name="filecoin">FIL</string>
    <string name="btc_details">比特币</string>
    <string name="open_wait">即将开放</string>
    <string name="acl">ACL</string>
    <string name="acl_details">“物联网+区块链”价值物联网生态系统</string>
    <string name="wallet_info">钱包信息</string>
    <string name="save_path">存储地址</string>
    <string name="save_local">本地存储</string>
    <string name="save_hardware">硬件存储</string>
    <string name="hint_wallet_name">钱包名称（备注）</string>
    <string name="hint_wallet_password">钱包密码</string>
    <string name="hint_wallet_password_again">再次输入密码</string>
    <string name="hint_password_info">密码提示信息（选填）</string>
    <string name="back_up_mnemonic">备份助记词</string>
    <string name="wallet_success_tips_1">钱包创建成功，</string>
    <string name="wallet_success_tips_2">现在立即备份你的钱包！</string>
    <string name="wallet_success_tips_3">• 请勿将助记词透露给任何人，也不能保存在网络上</string>
    <string name="wallet_success_tips_4">• TJWallet是去中心化钱包，不会存储您的私钥和助记词</string>
    <string name="wallet_success_tips_5">• 在收款或卸载TJWallet前，务必完成助记词备份</string>
    <string name="wallet_success_tips_6">恭喜，您的钱包已经创建成功！【助记词】是恢复钱包资产的唯一途径，一旦丢失，资产将无法找回。为了您的钱包资产安全，建议立刻使用纸和笔备份下面【助记词】。</string>
    <string name="next_tap">下一步</string>
    <string name="remember">切记：</string>
    <string name="jump_back_up_later">稍后备份（不建议）</string>
    <string name="improt_my_walley">导入已有钱包</string>
    <string name="write_mnemonic">备份助记词</string>
    <string name="write_mnemonic_tips1">抄写下面钱包助记词</string>
    <string name="write_mnemonic_tips2">任何人获得了助记词就意味着获得了资产所有权，为了安全请不要拍照/截屏保存！建议将它抄写到纸上，并存放在安全的地方。</string>
    <string name="write_mnemonic_tips3">请将它准确抄写到纸上，并存放在安全的地方。</string>
    <string name="back_up_ed">已备份，去验证</string>
    <string name="verification_mnemonic">验证助记词</string>
    <string name="verification_mnemonic_tips1">确认你的钱包助记词</string>
    <string name="verification_mnemonic_tips2">请按顺序点击助记词，以确认你的助记词备份无误。</string>
    <string name="verification">验证</string>
    <string name="enter_password">请输入钱包密码</string>
    <string name="submit">提交</string>
    <string name="wallet_manager">钱包管理</string>
    <string name="address_book">地址簿</string>
    <string name="setting">系统设置</string>
    <string name="help_center">帮助中心</string>
    <string name="about_as">关于我们</string>
    <string name="password_tips">密码提示信息</string>
    <string name="edit_password">修改密码</string>
    <string name="export_mnemonics">导出助记词</string>
    <string name="export_keystore">导出Keystore</string>
    <string name="export_private_key">导出私钥</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="delete_explanation">钱包删除后只能通过助记词或私钥恢复，请先进行备份</string>
    <string name="export_private_key_explanation">私钥未经加密，导出有风险，请妥善保存</string>
    <string name="close">关闭</string>
    <string name="tips">提示</string>
    <string name="goto_backup">去备份</string>
    <string name="no_tips">提示信息为空</string>
    <string name="export_keystore_warning">请勿拍照或截图，Keystore泄露将导致您的资产不再安全，请妥善保管好您的Keystore文件。</string>
    <string name="show_qrcode">显示二维码</string>
    <string name="copy">复制</string>
    <string name="hint_current_password">当前密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_new_password_again">再次输入密码</string>
    <string name="mnemonics">助记词</string>
    <string name="private_key">私钥</string>
    <string name="keystore">Keystore</string>
    <string name="import_by_mnemonics_hint">请输入助记词，用空格隔开</string>
    <string name="import_by_private_key_hint">请输入私钥内容</string>
    <string name="import_by_keystore_hint">请复制粘贴以太坊钱包Keystore文件至此处，或通过扫描Keystore二维码录入。</string>
    <string name="keystore_password_hint">Keystore密码</string>
    <string name="complete_info">设置安全信息</string>
    <string name="slogan">专业可信赖的数字资产管理工具</string>
    <string name="payment_address">收款地址</string>
    <string name="transfer_amount">转账金额</string>
    <string name="transfer_tips">转账备注</string>
    <string name="miners_fee">矿工费用</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="pay_details">支付详情</string>
    <string name="transfer_into_address">转入地址</string>
    <string name="transfer_out_address">付款地址</string>
    <string name="transfer_type">交易类型</string>
    <string name="edit_address">编辑地址</string>
    <string name="edit_address_hint">请输入有效的钱包地址</string>
    <string name="address_name_hint">地址名称</string>
    <string name="address_tips_hint">描述信息(选填）</string>
    <string name="save">保存</string>
    <string name="delete_address">删除地址</string>
    <string name="new_address">新建地址</string>
    <string name="address_details">地址详情</string>
    <string name="address_tips">描述信息</string>
    <string name="add_coin">添加币种</string>
    <string name="search_coin_hint">搜索添加数字货币</string>
    <string name="search">搜索</string>
    <string name="hardware_guide_title">请将 W1 硬件钱包连接到手机</string>
    <string name="hardware_guide_tips1">1 打开手机【设置】-【系统】-【OTG数据】,设为开启;</string>
    <string name="hardware_guide_tips2">2 将 W1 硬件钱包通过充电口接入手机；</string>
    <string name="hardware_guide_tips3">3 重新打开 TJWallet 客户端，确认硬件包连接成功。</string>
    <string name="hardware_guide_tips4">温馨提示：若一直显示未连接，请确认OTG功能是否正常开启，硬件钱包与手机是否接触不良。</string>
    <string name="use_tutorial">使用教程</string>
    <string name="hardware_init_title">初始化提示</string>
    <string name="hardware_init_content">检测到您当前的 W1 钱包尚未初始化，是否现在初始化并创建新的钱包地址?</string>
    <string name="hardware_init_btn_ok">初始化</string>
    <string name="hardware_has_wallet_title">检测到硬件接入</string>
    <string name="hardware_has_wallet_content">是否切换到 W1 硬件钱包资产界面？</string>
    <string name="hardware_has_wallet_btn_ok">切换</string>
    <string name="hardware_disconnect_title">断开连接</string>
    <string name="hardware_disconnect_content">检测到硬件钱包已断开，若需要继续进行查看/交易操作，请重新连接</string>
    <string name="feedback">意见反馈</string>
    <string name="service_agreement">服务协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="check_for_updates">检查更新</string>
    <string name="has_new_version">新版本</string>
    <string name="choose_coin">选择币种</string>
    <string name="your_problem">您遇到的问题？</string>
    <string name="search_help_content">搜索帮助内容</string>
    <string name="more">更多</string>
    <string name="information">消息</string>
    <string name="information_details">消息详情</string>
    <string name="update_now">立即升级</string>
    <string name="update_wait">暂不升级</string>
    <string name="select_wallet_chain">选择钱包体系</string>
    <string name="init_wallet">初始化钱包</string>
    <string name="set_pin">设置安全PIN码</string>
    <string name="set_pin_again">再次输入PIN码</string>
    <string name="pin_desc">每次使用 W1 硬件钱包进行交易转账时，都需要验证PIN码</string>
    <string name="management">管理</string>
    <string name="create_wallet_success">备份助记词</string>
    <string name="wallet_verification_success">钱包备份成功</string>
    <string name="verification_success_tips1">注意，出于安全起见，TJWallet不会保存您钱包的密码、私钥和助记词，也无法帮您找回它们，所以请务必妥善保管您的【助记词】。</string>
    <string name="verification_success_tips2">A. 如果助记词丢失，用户记得钱包密码且未曾卸载钱包，可通过个人中心—钱包管理—查看钱包详情—导出助记词重新进行备份，再进行钱包恢复，并根据实际需要转移资产。</string>
    <string name="verification_success_tips3">B. 如果助记词丢失并且忘记钱包密码，只能努力找回密码或找回助记词，如不能记起，钱包资产将无法找回。</string>
    <string name="no_connect">USB 未连接 ...</string>
    <string name="dis_connect">USB 已断开 ...</string>
    <string name="agreed_comply">我已阅读并同意遵守</string>
    <string name="service_agree">TJWallet服务协议</string>
    <string name="select_chain_type_desc">请选择你要使用的钱包体系，添加一个新的钱包。</string>
    <string name="select_add_wallet_type">选择添加 %1$s 方式</string>
    <string name="select_add_wallet_type_desc">你可以通过备份的助记词、私钥和Keystore导入已有的钱包,也可以创建一个新的钱包地址。</string>
    <string name="add_for_import_mnemonic">通过助记词导入</string>
    <string name="add_for_import_private_key">通过私钥导入</string>
    <string name="add_for_import_keystore">通过Keystore和密码导入</string>
    <string name="add_for_create_new_wallet">创建一个新钱包</string>
    <string name="set_wallet_name">设置钱包名称</string>
    <string name="set_wallet_name_desc">钱包名称可以帮助您区分不同的钱包账户</string>
    <string name="set_wallet_name_hint">1-10个中英文字符</string>
    <string name="step_3_1">步骤1/3</string>
    <string name="step_3_2">步骤2/3</string>
    <string name="step_3_3">步骤3/3</string>
    <string name="step_4_1">步骤1/4</string>
    <string name="step_4_2">步骤2/4</string>
    <string name="step_4_3">步骤3/4</string>
    <string name="step_4_4">步骤4/4</string>
    <string name="step_2_1">步骤1/2</string>
    <string name="step_2_2">步骤2/2</string>
    <string name="step_2_set_wallet_password">设置钱包密码</string>
    <string name="step_2_set_wallet_password_desc1">· 密码用于加密保护私钥、转账，所以强度非常重要</string>
    <string name="step_2_set_wallet_password_desc2">· TJWallet不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="step_2_set_wallet_password_hint">请输入钱包密码</string>
    <string name="step_2_set_wallet_password_factor_title">您的密码应符合以下条件：</string>
    <string name="step_2_set_wallet_password_factor_1">至少1个大写字母</string>
    <string name="step_2_set_wallet_password_factor_2">至少1个小写字母</string>
    <string name="step_2_set_wallet_password_factor_3">至少1个数字</string>
    <string name="step_2_set_wallet_password_factor_4">至少8个字符</string>
    <string name="step_3_set_wallet_password">再次输入密码</string>
    <string name="step_3_set_wallet_password_hint">再次输入密码</string>
    <string name="import_by_mnemonic_step_1_title_1">输入助记词</string>
    <string name="import_by_mnemonic_step_1_desc">支持12位助记词导入。</string>
    <string name="import_by_mnemonic_step_1_hint">输入前4个字母就会出现完整的单词</string>
    <string name="import_by_mnemonic_step_1_title_2">已输入的助记词(点击可修改)</string>
    <string name="import_by_private_key_step_1_title">输入私钥</string>
    <string name="import_by_private_key_step_1_desc">直接在下方输入私钥内容，或扫描二维码导入。</string>
    <string name="import_by_keystore_step_1_title_1">输入Keystore</string>
    <string name="start_backup">开始备份</string>
    <string name="edit_wallet_name">修改钱包名称</string>
    <string name="edit_wallet_name_hint">钱包名称</string>
</resources>