<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dialog_margin"
    android:layout_marginRight="@dimen/dialog_margin"
    android:background="@drawable/radius_bg_white"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_wallet_name"
        android:textColor="@color/textMajor"
        android:textSize="@dimen/dialog_text_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_btn_minor"
        android:paddingLeft="@dimen/basic_paddingLR"
        android:paddingRight="@dimen/basic_paddingLR">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:hint="@string/edit_wallet_name_hint"
            android:maxLength="10"
            android:textColor="@color/textMajor"
            android:textColorHint="@color/tertiary"
            android:textSize="@dimen/textSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_collect_copy"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/tv_negative"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/btn_positive"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/textMajor"
            android:textSize="@dimen/textSmall" />

    </RelativeLayout>


</LinearLayout>