<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/root_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="77dp"
                android:layout_marginBottom="120dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/basic_paddingLR"
                android:paddingRight="@dimen/basic_paddingLR">


                <ImageView
                    android:id="@+id/img_bg"
                    android:layout_width="match_parent"
                    android:layout_height="141dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/create_success_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/radius_bg_bottom_white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/create_wallet_success"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_zone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_marginLR"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="@dimen/basic_marginLR"
                        android:text="@string/wallet_success_tips_6"
                        android:textColor="@color/warning_red"
                        android:textSize="@dimen/textNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_marginLR"
                        android:layout_marginTop="16dp"
                        android:text="@string/remember"
                        android:textColor="@color/textMajor"
                        android:textSize="@dimen/textNormal" />


                    <TextView
                        android:id="@+id/tv_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_marginLR"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="@dimen/basic_marginLR"
                        android:text="@string/wallet_success_tips_3"
                        android:textColor="@color/textMajor"
                        android:textSize="@dimen/textSmall" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_marginLR"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="@dimen/basic_marginLR"
                        android:text="@string/wallet_success_tips_4"
                        android:textColor="@color/textMajor"
                        android:textSize="@dimen/textSmall" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_marginLR"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="@dimen/basic_marginLR"
                        android:layout_marginBottom="20dp"
                        android:text="@string/wallet_success_tips_5"
                        android:textColor="@color/textMajor"
                        android:textSize="@dimen/textSmall" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bottom_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/basic_marginLR"
                android:layout_marginRight="@dimen/basic_marginLR"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_next"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_collect_copy"
                    android:gravity="center"
                    android:text="@string/start_backup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textNormal" />

                <TextView
                    android:id="@+id/tv_jump"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius_btn_minor"
                    android:gravity="center"
                    android:text="@string/jump_back_up_later"
                    android:textColor="@color/textMajor"
                    android:textSize="@dimen/textNormal" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

