<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/ll_set_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/basic_marginLR"
        android:layout_marginTop="77dp"
        android:layout_marginRight="@dimen/basic_marginLR"
        android:background="@drawable/radius_bg_white"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/radius_dialog_wallet_manager">

            <View
                android:id="@+id/view_line"
                android:layout_width="2dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:background="@color/btn_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/basic_marginLR"
                android:text="@string/step_2_set_wallet_password"
                android:textColor="@color/wallet_fg_text"
                android:textSize="@dimen/textBig" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_marginLR"
            android:layout_marginRight="@dimen/basic_marginLR"
            android:text="@string/step_2_set_wallet_password_desc1"
            android:textColor="@color/secondary"
            android:textSize="@dimen/textNormal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_marginLR"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/basic_marginLR"
            android:text="@string/step_2_set_wallet_password_desc2"
            android:textColor="@color/secondary"
            android:textSize="@dimen/textNormal" />

        <!--钱包密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/basic_marginLR"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/basic_marginLR"
            android:background="@drawable/radius_btn_minor"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/basic_paddingLR"
            android:paddingRight="@dimen/basic_paddingLR">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/step_2_set_wallet_password_hint"
                android:singleLine="true"
                android:textColor="@color/textMajor"
                android:textColorHint="@color/textHint"
                android:textSize="@dimen/textNormal" />

            <RelativeLayout
                android:id="@+id/rl_pwd_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_pwd_eye"
                    android:layout_width="18dp"
                    android:layout_height="12dp"
                    android:layout_centerInParent="true"
                    android:scaleType="center"
                    android:src="@drawable/cantsee_dark" />


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_set_password"
        android:layout_marginLeft="@dimen/basic_marginLR"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/basic_marginLR"
        android:background="@drawable/radius_bg_collect_edt"
        android:orientation="vertical"
        android:padding="@dimen/basic_paddingLR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_2_set_wallet_password_factor_title"
            android:textColor="@color/secondary"
            android:textSize="@dimen/textNormal" />

        <!--条件1-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_factor_1"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/unsatisfied_condition" />

            <TextView
                android:id="@+id/tv_factor_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/step_2_set_wallet_password_factor_1"
                android:textColor="@color/warning_red"
                android:textSize="@dimen/textNormal" />

        </LinearLayout>
        <!--条件2-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_factor_2"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/unsatisfied_condition" />

            <TextView
                android:id="@+id/tv_factor_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/step_2_set_wallet_password_factor_2"
                android:textColor="@color/warning_red"
                android:textSize="@dimen/textNormal" />

        </LinearLayout>
        <!--条件3-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_factor_3"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/unsatisfied_condition" />

            <TextView
                android:id="@+id/tv_factor_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/step_2_set_wallet_password_factor_3"
                android:textColor="@color/warning_red"
                android:textSize="@dimen/textNormal" />

        </LinearLayout>
        <!--条件4-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_factor_4"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/unsatisfied_condition" />

            <TextView
                android:id="@+id/tv_factor_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/step_2_set_wallet_password_factor_4"
                android:textColor="@color/warning_red"
                android:textSize="@dimen/textNormal" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/basic_marginLR"
        android:layout_marginRight="@dimen/basic_marginLR"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius_btn_noenabled"
        android:gravity="center"
        android:text="@string/next_tap"
        android:textColor="@color/white"
        android:textSize="@dimen/textNormal" />

    <TextView
        android:id="@+id/tv_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/step_3_2"
        android:textColor="@color/secondary"
        android:textSize="@dimen/textNormal" />

</RelativeLayout>